spacing issue fix and curator removed from banner

--- a/src/app/routes/public/public-toc-banner/public-toc-banner.component.scss
+++ b/src/app/routes/public/public-toc-banner/public-toc-banner.component.scss
@@ -52,6 +52,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
+  margin-bottom: 10px;
 }
 
 .details {
